Fix calendar "jump" when resizing

--- a/web/public/css/app.css
+++ b/web/public/css/app.css
@@ -77,11 +77,6 @@ span.username {
 
 #sidebar {
   max-width: 200px;
-  min-width: 150px;
-}
-
-#calendar_view {
-  min-width: 800px;
 }
 
 #footer {
